--- a/index.htm
+++ b/index.htm
@@ -1,42 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
-        body { font-family: sans-serif; background: var(--tg-theme-bg-color); color: var(--tg-theme-text-color); padding: 20px; }
-        input, select { width: 100%; padding: 10px; margin: 10px 0; border-radius: 8px; border: 1px solid #ccc; }
-        button { width: 100%; padding: 15px; background: #248b1d; color: white; border: none; border-radius: 8px; cursor: pointer; }
+        :root { --tg-theme-bg: var(--tg-theme-bg-color, #ffffff); --tg-theme-text: var(--tg-theme-text-color, #222222); --tg-theme-hint: var(--tg-theme-hint-color, #999999); --tg-theme-button: var(--tg-theme-button-color, #248b1d); }
+        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: var(--tg-theme-bg); color: var(--tg-theme-text); padding: 15px; margin: 0; }
+        .form-group { margin-bottom: 15px; }
+        label { display: block; font-size: 14px; color: var(--tg-theme-hint); margin-bottom: 5px; }
+        input, select, textarea { width: 100%; padding: 12px; border: 1px solid #ccc; border-radius: 8px; box-sizing: border-box; background: var(--tg-theme-bg); color: var(--tg-theme-text); font-size: 16px; }
+        .row { display: flex; gap: 10px; }
+        .btn { width: 100%; padding: 15px; background: var(--tg-theme-button); color: white; border: none; border-radius: 8px; font-weight: bold; font-size: 16px; margin-top: 10px; cursor: pointer; }
+        .split-box { background: rgba(0,0,0,0.05); padding: 10px; border-radius: 8px; margin-top: 5px; }
     </style>
 </head>
 <body>
-    <h3>New Expense</h3>
-    <input type="number" id="amount" placeholder="Amount">
-    <select id="currency">
-        <option value="USD">USD</option>
-        <option value="EUR">EUR</option>
-        <option value="SGD">SGD</option>
-    </select>
-    <input type="text" id="desc" placeholder="What was it for?">
-    <p>Split with (comma separated names):</p>
-    <input type="text" id="who" placeholder="Alex, Sam, Jordan">
-    
-    <button onclick="sendData()">Add to Sheet</button>
+    <div class="form-group">
+        <label>Description</label>
+        <input type="text" id="desc" placeholder="e.g. Dinner, Taxi">
+    </div>
 
-    <script>
-        const tg = window.Telegram.WebApp;
-        tg.ready();
-
-        function sendData() {
-            const data = {
-                amount: document.getElementById('amount').value,
-                currency: document.getElementById('currency').value,
-                description: document.getElementById('desc').value,
-                who: document.getElementById('who').value
-            };
-            // This sends the data as a string to the bot chat
-            tg.sendData(JSON.stringify(data));
-            tg.close(); // Closes the mini app window
-        }
-    </script>
-</body>
-</html>
+    <div class="row">
+        <div class="form-group" style="flex: 2;">
+            <label>Amount</label>
+            <input type="number" id="amount" placeholder="0.00">
+        </div>
+        <div class="form-group" style="flex: 1;">
+            <label>Currency</label>
+            <select id="currency
